--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,9 @@ services:
     volumes:
       - ./src:/app/src
     ports:
-      - "9000:8000"
+      - "${API_PORT:-8000}:8000"
     environment:
-      API_PORT: ${API_PORT:-9000}
+      API_PORT: ${API_PORT:-8000}
       DEBUG: ${DEBUG:-true}
       LOG_LEVEL: ${LOG_LEVEL}
       PYTHONPATH: /app:/app/src
